<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@color/grey"
        android:drawableStart="@drawable/android_messages"
        android:drawablePadding="@dimen/dp_8"
        android:gravity="center"
        android:padding="@dimen/dp_4"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/lbl_transaction_amount"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tvTransactionAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="@string/lbl_transaction_amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/lbl_transaction_type"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tvTransactionType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="@string/lbl_transaction_type" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/lbl_transaction_tag"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tvMessagesTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        tools:text="@string/lbl_transaction_tag" />

    <LinearLayout
        android:id="@+id/llEditTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/etTag"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_32"
            android:background="@drawable/rectangle"
            android:inputType="text"
            android:padding="@dimen/dp_6"
            android:singleLine="true"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:background="@drawable/ripple_button"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/black"
        android:contentDescription="@string/divider" />

</LinearLayout>